--- a/app/src/main/res/layout/custom_light.xml
+++ b/app/src/main/res/layout/custom_light.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/custom_light"
     android:layout_height="350dp"
+    android:background="@drawable/dialog_background_center"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:wheel="http://schemas.android.com/apk/res-auto"
         android:id="@+id/loading"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/dialog_background_center">
+        android:layout_height="match_parent">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_close_24dp"
-            android:layout_alignParentRight="true"
-            android:padding="@dimen/activity_horizontal_margin"/>
+            android:src="@drawable/ic_close"
+            android:layout_alignParentEnd="true"
+            android:contentDescription="@string/close_image"
+            android:padding="@dimen/activity_horizontal_margin"
+            tools:ignore="RtlCompat" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -30,12 +31,13 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/image_profile"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Andreson Thomas"
+                android:text="@string/andreson_thomas"
                 android:textColor="@android:color/black"
                 android:textSize="17sp"
                 android:textStyle="bold"
@@ -50,7 +52,7 @@
             <Button
                 android:layout_width="120dp"
                 android:layout_height="40dp"
-                android:text="follow"
+                android:text="@string/follow"
                 android:textColor="@android:color/white"
                 android:background="@drawable/bg_btn"
                 android:layout_margin="@dimen/activity_horizontal_margin"/>
@@ -70,7 +72,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="35.7K"
+                        android:text="@string/_35_7k"
                         android:textColor="@android:color/black"
                         android:textStyle="bold"
                         android:textSize="17sp"/>
@@ -78,7 +80,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Followers"/>
+                        android:text="@string/followers"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -86,12 +88,13 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:gravity="center"
-                    android:layout_marginLeft="50dp">
+                    android:layout_marginStart="50dp"
+                    tools:ignore="RtlCompat">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="215"
+                        android:text="@string/_215"
                         android:textColor="@android:color/black"
                         android:textStyle="bold"
                         android:textSize="17sp"
@@ -100,7 +103,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Following"/>
+                        android:text="@string/following"/>
                 </LinearLayout>
 
             </LinearLayout>
