--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:wheel="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/loading"
     android:layout_width="@dimen/alert_width"
     android:layout_height="300dp"
-    android:gravity="center"
     android:layout_gravity="center"
-    android:orientation="vertical"
-    android:background="@drawable/dialog_background">
+    android:background="@drawable/dialog_background"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:background="@drawable/dialog_background_center"
         android:layout_marginTop="150dp"
+        android:background="@drawable/custom_dialod_light"
         android:orientation="vertical">
 
 
@@ -21,18 +21,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/lorem_ipsum_dolor_sit_amet"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="40dp"/>
+            android:text="@string/lorem_ipsum_dolor_sit_amet"
+            tools:ignore="RtlCompat" />
 
         <Button
             android:layout_width="120dp"
             android:layout_height="40dp"
-            android:text="@string/retry"
+            android:layout_marginStart="60dp"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="60dp"
+            android:background="@drawable/red_error_button_background"
+            android:text="@string/retry"
             android:textColor="@android:color/white"
-            android:background="@drawable/bg_btn"/>
+            tools:ignore="RtlCompat" />
 
     </LinearLayout>
 
