--- a/app/src/main/res/layout/custom_dark.xml
+++ b/app/src/main/res/layout/custom_dark.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/custom_light"
     android:layout_height="350dp"
-    android:background="@drawable/dialog_background_dark"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="@drawable/custom_dialog_dark">
 
 
     <RelativeLayout
@@ -15,47 +14,46 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_close"
             android:layout_alignParentEnd="true"
             android:contentDescription="@string/close_image"
             android:padding="@dimen/activity_horizontal_margin"
+            android:src="@drawable/ic_close"
             tools:ignore="RtlCompat" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_centerInParent="true"
             android:gravity="center"
-            android:layout_centerInParent="true">
+            android:orientation="vertical">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/image_profile"/>
+                android:contentDescription="@string/image_profile" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/activity_horizontal_margin"
                 android:text="@string/andreson_thomas"
                 android:textColor="@android:color/white"
                 android:textSize="17sp"
-                android:textStyle="bold"
-                android:layout_margin="@dimen/activity_horizontal_margin"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/gray_btn_bg_color"
                 android:text="@string/lorem_ipsum_dolor_sit_amet"
-                />
+                android:textColor="@color/gray_btn_bg_color" />
 
             <Button
                 android:layout_width="120dp"
                 android:layout_height="40dp"
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:background="@drawable/red_error_button_background"
                 android:text="@string/follow"
-                android:textColor="@android:color/white"
-                android:background="@drawable/bg_btn"
-                android:layout_margin="@dimen/activity_horizontal_margin"/>
+                android:textColor="@android:color/white" />
 
 
             <LinearLayout
@@ -74,22 +72,22 @@
                         android:layout_height="wrap_content"
                         android:text="@string/_35_7k"
                         android:textColor="@android:color/white"
-                        android:textStyle="bold"
-                        android:textSize="17sp"/>
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/gray_btn_bg_color"
-                        android:text="@string/followers"/>
+                        android:text="@string/followers"
+                        android:textColor="@color/gray_btn_bg_color" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center"
                     android:layout_marginStart="50dp"
+                    android:gravity="center"
+                    android:orientation="vertical"
                     tools:ignore="RtlCompat">
 
                     <TextView
@@ -97,15 +95,14 @@
                         android:layout_height="wrap_content"
                         android:text="@string/_215"
                         android:textColor="@android:color/white"
-                        android:textStyle="bold"
                         android:textSize="17sp"
-                        />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/gray_btn_bg_color"
-                        android:text="@string/following"/>
+                        android:text="@string/following"
+                        android:textColor="@color/gray_btn_bg_color" />
                 </LinearLayout>
 
             </LinearLayout>
